# growpi

./: Cargo.toml  README.md  growpi.history.csv  growpi.service  growpi.toml
html/growpi/: README.md  index.html  package-lock.json  package.json
html/growpi/src/: App.vue  main.js
src/: actuators.rs  cli_mode.rs  config.rs  control.rs  data_logging.rs  dht11.rs  error.rs  history.rs  io.rs  main.rs  sensors.rs  server.rs  state.rs
src/control/: data_logging.rs  imaging.rs  light.rs  mod.rs  soil.rs  temperature.rs  ventilation.rs
