[package]
name = "rpitest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.17.1"
#rumqttc = "0.24.0"
interrupts = "0.1.5"
libc = "0.2.153"

[dependencies.linux_realtime]
path = "../linux_realtime"
