[package]
name = "growpi"
version = "0.1.0"
edition = "2021"

[dependencies]
rppal = { version = "0.17", features = ["hal"] }
libc = "0.2"
ads1x1x = "0.2"
nb = "1.1"
rustyline = "14.0"
serde = { "version" = "1.0", features = ["derive"] }
toml = "0.8"
axum = { "version" = "0.7", features = ["macros"] }
tokio = { "version" = "1.37" }
chrono = "0.4"
tower-http = { "version" = "0.5", features = ["cors"] }
